--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,3 +1,11 @@
 
-
+<h1><%= @team.name %></h1>
+<h3>Team Motto: <%= @team.motto %></h3><br>
+<br>
+ 
+<% @heroes.each do |hero| %>
+    <h2>Hero Name: <%= hero.name %></h2><br>
+    <p>Hero Power: <%= hero.power %></p><br>
+    <p>Hero Biography: <%= hero.bio %></p><br>
+<% end %>
 
