automatically backed up by learn

--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -7,20 +7,20 @@
   <br>
   <h2>Hero 1</h2>
   <br>
-  <label>Hero's Name: </label><input id = "member1_name" type="text" name="team[members][0][name]"><br>
-  <label>Hero's Power: </label><input id = "member1_power" type="text" name="team[members][0][power]"><br>
-  <label>Hero's Biography: </label><input id = "member1_bio" type="text" name="team[members][0][bio]"><br>
+  <label>Hero's Name: </label><input id = "member1_name" type="text" name="team[members][][name]"><br>
+  <label>Hero's Power: </label><input id = "member1_power" type="text" name="team[members][][power]"><br>
+  <label>Hero's Biography: </label><input id = "member1_bio" type="text" name="team[members][][bio]"><br>
   <br>
   <h2>Hero 2</h2>
   <br>
-  <label>Hero's Name: </label><input id = "member2_name" type="text" name="team[members][1][name]"><br>
-  <label>Hero's Power: </label><input id = "member2_power" type="text" name="team[members][1][power]"><br>
-  <label>Hero's Biography: </label><input id = "member2_bio" type="text" name="team[members][1][bio]"><br>
+  <label>Hero's Name: </label><input id = "member2_name" type="text" name="team[members][][name]"><br>
+  <label>Hero's Power: </label><input id = "member2_power" type="text" name="team[members][][power]"><br>
+  <label>Hero's Biography: </label><input id = "member2_bio" type="text" name="team[members][][bio]"><br>
   <br>
   <h2>Hero 3</h2>
   <br>
-  <label>Hero's Name: </label><input id = "member3_name" type="text" name="team[members][2][name]"><br>
-  <label>Hero's Power: </label><input id = "member3_power" type="text" name="team[members][2][power]"><br>
-  <label>Hero's Biography: </label><input id = "member3_bio" type="text" name="team[members][2][bio]"><br>
+  <label>Hero's Name: </label><input id = "member3_name" type="text" name="team[members][][name]"><br>
+  <label>Hero's Power: </label><input id = "member3_power" type="text" name="team[members][][power]"><br>
+  <label>Hero's Biography: </label><input id = "member3_bio" type="text" name="team[members][][bio]"><br>
   <input type="submit" id="submit">
 </form>
